--- a/.github/workflows/test-build-deploy.yml
+++ b/.github/workflows/test-build-deploy.yml
@@ -1,9 +1,11 @@
 name: Build Docker Images
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
+      - self-host
 
 jobs:
   # run-tests:
@@ -33,11 +35,8 @@ jobs:
     # needs: run-tests
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the private Ops repo
+      - name: Check out the repo
         uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.ACCESS_TOKEN }}
-          submodules: "recursive"
 
       - name: Generate data
         id: date
@@ -50,11 +49,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to private Docker Registry
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
-          password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push lunary-ee
         uses: docker/build-push-action@v5
@@ -63,8 +63,8 @@ jobs:
           file: ./ops/Dockerfile
           push: true
           tags: |
-            lunary/lunary-ee:latest
-            lunary/lunary-ee:rev-${{ steps.date.outputs.date }}-${{ steps.commit.outputs.hash }}
+            ${{ github.actor }}/llmonitor:latest
+            ${{ github.actor }}/llmonitor:rev-${{ steps.date.outputs.date }}-${{ steps.commit.outputs.hash }}
           platforms: linux/amd64
 
   # deploy:
